--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "focusflow-web",
+  "name": "nextly",
   "private": true,
   "version": "1.1.0",
   "type": "module",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "openai": "^6.15.0",
